Remove flicker when changing effect plugins by not fully reloading compositing plugins anymore. Replaces one hack with another hack (due to having to support multiple kwin instances),  but provides a much better user experience. Big thanks to mgraesslin for comments,  review,  and fixes.

BUG: 183107

svn path=/trunk/KDE/kdebase/workspace/; revision=1022489